# dynamic_analysis

1_make/: .gdb_history  Makefile  main  main.c
2_cmake/: CMakeLists.txt
3_dynamic/: CMakeLists.txt  Makefile  main  main.c  utils.c  utils.h
4_ltrace/: main  main.c
5_gdb/: .gdb_history  main  main.c
6_asm/: .gdb_history  1  1.asm  2  2.asm
